--- a/css/main.css
+++ b/css/main.css
@@ -132,7 +132,7 @@ a {
     position: fixed;
     top: -10%;
     left: 2%;
-    max-width: 30%;
+    max-width: 21%;
     padding: 0;
 }
 .frog-icon {
@@ -149,21 +149,46 @@ a {
     position:absolute;
     left: 0; 
     width: 100%;
-    margin-left:50%;
-    font-size : 90px;
+    margin-left:40%;
+    margin-top: 10px;
+    font-size : 80px;
     font-weight: bolder;
     font-family: sans-serif; 
     top: 200px; 
+ }
+ .title-line2 {
+    position:absolute;
+    left: 0; 
+    width: 100%;
+    margin-left:40%;
+    margin-top: 15px;
+    font-size : 80px;
+    font-weight: bolder;
+    font-family: sans-serif; 
+    top: 275px;
+ }
+ .title-line3 {
+    color: white;
+    position:absolute;
+    left: 0; 
+    width: 100%;
+    margin-left:40%;
+    margin-top: 10px;
+    font-size : 80px;
+    font-weight: bolder;
+    font-family: sans-serif; 
+    top: 355px;
  }
  .title-remark {
     position:absolute;
     left: 0; 
     width: 100%;
-    font-size: 20px;
+    font-style: bolder;
+    font-size: 25px;
     font-family: sans-serif;
     color: white;
-    margin-left: 58%;
-    top: 365px;
+    margin-left: 53%;
+    top: 400px;
  }
 .header-image { 
    position: relative; 
@@ -171,22 +196,32 @@ a {
    z-index: -10;
    margin-left: 5%;
    }
-
+.frog-soup {
+    max-width: 43%;
+    margin-top: 48px;
+    margin-left: -50px;
+}
 
  /* About Section */
 .recipe {
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
+    top: 50;
     max-width: 20%;
     margin-left: 5%;
 }
 .ingredients {
+    position: sticky;
     max-width: 50%;
     margin-left: 5%;
 }
 .la-way {
+    position: sticky;
     max-width: 50%;
     margin-left: 5%;
 }
 .viola {
+    position: sticky;
     z-index: -10;
     margin-left: 5%;
     max-width: 50%;
