--- a/css/main.css
+++ b/css/main.css
@@ -348,9 +348,8 @@ p a{
     font-family: sans-serif;
     font-weight:bold;
     color: #c88064;
-   
     }
-.instagram:hover {
+.social-media:hover {
     color:#fff;
     }
 .language {
