--- a/css/main.css
+++ b/css/main.css
@@ -221,26 +221,42 @@ p a{
 
  /* About Section */
 
-.about {
+.card {
     position: sticky;
-    top:0;
+    bottom:0;
+    margin:0;
     }
 .container {
     position: relative;
+    top: -40px
+    margin-left: 35%;
+    margin-top:-75px;
     text-align: center;
     color: #505052;
+    border: 1px solid white;
     }
+.container2 {
+    position: relative;
+    margin-top:-230px;
+    margin-left: 50px;
+}
 .recipe {
+    
     max-width: 35%;
     margin-left: -45%;
+    border: 1px solid white;
     }
 .ingredients {
     max-width: 60%;
     margin-left: 5%;
+    border: 1px solid white;
     }
 .la-way {
+    position:relative;
+    top:170px;
     max-width: 80%;
     margin-left: -3%;
+    border: 1px solid white;
     }
 .disclaimer {
     position: absolute;
@@ -263,9 +279,8 @@ p a{
 .clearfix {
     display:flex;
     flex-wrap:nowrap;
-    align-items:baseline;
+    align-items:baseline; 
     margin: 0px -5px 0px 5%;
-    border: 1px solid white;
     }
 .reason1 {
    max-width:120%;
@@ -337,6 +352,9 @@ p a{
 .social-media:hover {
     color:#fff;
     }
+.highlight:hover {
+    color: #c88064;
+}
 .language {
     position: fixed;
     top: 40%;
