--- a/css/main.css
+++ b/css/main.css
@@ -163,7 +163,7 @@ p a{
     left: 0; 
     width: 100%;
     margin: -80px 0px 0px 69%;
-    font-size : 100px;
+    font-size : 110px;
     font-weight: bolder;
     font-family: sans-serif;
     letter-spacing: -5px;
@@ -173,8 +173,8 @@ p a{
     top: 275px;
     left: 0;
     width: 100%; 
-    margin: -70px 0px 0px 69%;
-    font-size: 100px;
+    margin: -63px 0px 0px 69%;
+    font-size: 110px;
     font-weight: bolder;
     font-family: sans-serif;
     letter-spacing: -5px; 
@@ -183,8 +183,8 @@ p a{
     position:absolute;
     top: 355px;
     left: 0; 
-    margin: -70px 0px 0px 69%;
-    font-size : 100px;
+    margin: -55px 0px 0px 69%;
+    font-size : 110px;
     font-weight: bolder;
     font-family: sans-serif;
     letter-spacing: -5px; 
@@ -192,9 +192,8 @@ p a{
     }
  .title-line3-remark {
     position:absolute;
-    top: 337px;
-    left: 0;
-    margin-left: 90%; 
+    top: 365px;
+    margin-left: 92%; 
     font-size: 25px;
     font-family: sans-serif;
     font-style: bolder;
@@ -203,8 +202,9 @@ p a{
 .intro-paragraph {
     position: absolute;
     top: 445px;
-    left: 80px;
-    font-size: 18px;
+    left: 220px;
+    width:50%;
+    font-size: 19px;
     color:#505052;
     }
 .header-image { 
