--- a/css/main.css
+++ b/css/main.css
@@ -222,36 +222,36 @@ p a{
  /* About Section */
 
 .card {
-    position: sticky;
-    bottom:0;
-    margin:0;
+    display:flex;
+   
+    align-items:center;
+    margin: 0px -5px 0px 0px;
+    border:1px solid white;
     }
 .container {
     position: relative;
     top: -40px
-    margin-left: 35%;
+    margin: -75px 0px 0px 40%;
     margin-top:-75px;
     text-align: center;
     color: #505052;
     }
 .container2 {
-    position: relative;
-    margin-top:-230px;
+    display:flex;
     margin-left: 50px;
+    flex-direction:row-reverse;
+    align-items:center;
 }
 .recipe {
-    
-    max-width: 35%;
-    margin-left: -45%;
+    max-width: 50%;
     }
 .ingredients {
-    max-width: 60%;
+    max-width: 59%;
     margin-left: 5%;
     }
 .la-way {
-    position:relative;
     top:170px;
-    max-width: 80%;
+    max-width: 100%;
     margin-left: -3%;
     }
 .disclaimer {
